<resources>
    <string name="app_name">Equipment</string>
    <string name="login_activity">Login</string>
    <string name="registration_activity">Registration</string>
    <string name="product_list_activity">Product List</string>
    <string name="forgot_password_activity">Forgot Password</string>
    <string name="alert_connect_internet">Please Connect to Internet First</string>
    <string name="dialog_exit">Are you sure you want to exit?</string>
    <string name="exit_dialog">Exit</string>
    <string name="dialog_logout_confirm">Are you sure want to logout ?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="alert_enter_username">Please Enter Username</string>
    <string name="alert_enter_password">Please Enter Password</string>
    <string name="progress_msg">Loading...</string>
    <string name="error_volley">Error Fetching Data!!! Please Try Again.</string>
    <string name="toast_all_permission_req_to_start">All Permissions Required to Start Application.</string>
    <string name="password">Password</string>
    <string name="forgot_password_intent">Forgot Password?</string>
    <string name="create_account">create account?</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="change_language">Change Language</string>
    <string name="apply_for_vendor">Apply for becoming a vendor</string>
    <string name="search_product">Search</string>
    <string name="email_id_forgot_password">Please Enter Your Registered Email Id</string>
    <string name="email_send_on">We will send to Verification Code Your Email Id</string>
    <string name="e_mail">E-mail</string>
    <string name="send">Send</string>
    <string name="distance">Distance</string>
    <string name="rate">Rate</string>
    <string name="total">Total</string>
    <string name="login_exit">Are you sure you want to exit?</string>
    <string name="place_order">Place order</string>

    <!-- String values for ProductDetail page-->
    <string name="body_type">Body Type</string>
    <string name="chassis_no">Chassis No</string>
    <string name="color">Color</string>
    <string name="cubic_capacity">Cubic Capacity</string>
    <string name="engine_no">Engine No</string>
    <string name="fitted_date">Fitted Date</string>
    <string name="fuel">Fuel</string>
    <string name="hp">HP</string>
    <string name="laden_weight">Laden Weight</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="manufacturing_month">Manufacturing Month</string>
    <string name="manufacturing_year">Manufacturing Year</string>
    <string name="no_of_cylinder">No Of Cylinder</string>
    <string name="owner_serial">Owner Serial</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="registration_date">Registration Date</string>
    <string name="registration_number">Registration Number</string>
    <string name="rto_code">RTO Code</string>
    <string name="rto_name">RTO Name</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="state_code">State Code</string>
    <string name="unladen_weight">Unladen Weight</string>
    <string name="vehicle_class">Vehicle Class</string>
    <string name="wheelbase">Wheelbase</string>
    <string name="network_service_off">Your internet is off!!! Do you want to exit???</string>

    <!-- Store all values in one array-->
    <string-array name="product_detail_label">
        <item>@string/body_type</item>
        <item>@string/chassis_no</item>
        <item>@string/color</item>
        <item>@string/cubic_capacity</item>
        <item>@string/engine_no</item>
        <item>@string/fitted_date</item>
        <item>@string/fuel</item>
        <item>@string/hp</item>
        <item>@string/laden_weight</item>
        <item>@string/brand</item>
        <item>@string/model</item>
        <item>@string/manufacturing_month</item>
        <item>@string/manufacturing_year</item>
        <item>@string/no_of_cylinder</item>
        <item>@string/owner_serial</item>
        <item>@string/purchase_date</item>
        <item>@string/registration_date</item>
        <item>@string/registration_number</item>
        <item>@string/rto_code</item>
        <item>@string/rto_name</item>
        <item>@string/seating_capacity</item>
        <item>@string/state_code</item>
        <item>@string/unladen_weight</item>
        <item>@string/vehicle_class</item>
        <item>@string/wheelbase</item>
    </string-array>

</resources>
